    * When in multi-threaded mode, the download thread now checks to see
      if the update thread wants to exit.  This fixes many of the
      "timeout waiting for download thread to terminate" messages.
  o Building packages:
    * Dependencies are now generated for Java .class and .jar files.
      They are not yet enforced, to give time to rebuild Java packages.
    * CheckDesktopFiles now looks in /usr/share/icons for icons, and
      can find icon names without extensions specified.
    * Build actions which take a subDir keyword argument now also can
      take a skipMissingSubDir keyword argument which, if set to True,
      causes the build action to be skipped if the specified subdirectory
      does not exist.  By default, those build actions will now raise
      an error if the directory does not exist, rather than running in
      the wrong subdirectory as they did previously.
    * You can now cook a recipe that has a superclass that is defined  
      locally but a has supersuperclass that is in the repository.  Similarly,
      if you have a superclass that is in the repository but a supersuperclass
      locally, conary will find that as well 
    * r.Replace with parameters in the wrong order will now behave correctly
  o Code structure:
    * queryrep, query, showchangeset, and update --info all use the same 
      code to determine how to display their data.  Display.py was changed
      to perform general display operations.
    * query.py added
    * added JobSource concept for searching and manipulating lists of jobs.
    * moved datastore.py into repository module
    * Stubs have been added for adding python and perl dependencies, and
      the stubs have been set to be initially ignored.
    * The internal structure for conary configuration objects has changed


Changes in 0.71.2
  o Client Changes:
    * The update-conary option has been renamed updateconary per
      bugzilla #428
    * buildPath can be set in contexts